--- a/ReservaHoteles_TPFinal/Views/Home/Index.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/Index.cshtml
@@ -1,15 +1,8 @@
-﻿@{
+﻿@model List<Habitacion>
+
+@{
     ViewData["Title"] = "Home Page";
 }
-
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Reservas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-</head>
-<body>
 
     <div class="container" style="margin-top: 1rem;" />
         <div class="row">
@@ -24,7 +17,11 @@
                 <div class="col-lg-6 col-sm-12">
                     <label class="form-label" for="pagp">Forma de Pago :</label>
                     <select>
-                       <!-- CON C# BUSCAR EN LA BBDD MEDIOS PAGO Y MOSTRARLOS -->
+                       <option value="1">Credito</option>
+                       <option value="2">Debito</option>
+                       <option value="3">Mercado Pago</option>
+                       <option value="4">Transferencia</option>
+                       <option value="5">Efectivo</option>
                     </select>
                 </div>
             </div>
@@ -61,8 +58,13 @@
                 <div class="col-lg-6 col-sm-12">
                     <label class="form-label" for="pagp">Habitaciones :</label>
                     <select>
-                        <!-- CON C# BUSCAR EN LA BBDD MEDIOS PAGO Y MOSTRARLOS -->
-                    </select>
+                        @foreach(Habitacion h in Model)
+                        {
+                                <option value="@h.numHabitacion">@h.numHabitacion | Capacidad: @h.capacidad personas</option>
+                        
+                        }
+                     </select>
+                    
                 </div>
             </div>
 
@@ -88,6 +90,4 @@
             </div>
         </div>
 
-</body>
-</html>
 
