--- a/ReservaHoteles_TPFinal/Views/Home/Index.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/Index.cshtml
@@ -1,132 +1,38 @@
-﻿@model List<Habitacion>
-
+﻿@model FiltroReserva
 @{
     ViewData["Title"] = "Home Page";
-    // action="../Controllers/HomeController/NombreAccion" method="post" -->
 }
 
-<form class="container" style="margin-top: 1rem />
-        <div class="row">
-            <div class="mb-3">
-                <div class="col-lg-6 col-sm-12">
-                    <label class="form-label" for="titular">Titular</label>
-                    <input type="text" id="titular" class="form-control" /> 
-                </div>
+<form asp-controller="Home"  asp-action="ObtenerHabitaciones" class=" container" style="margin-top: 1rem">
+
+    <div class="row">
+
+        <div class="mb-3">
+            <div class="col-lg-6 col-sm-12">
+                <label class="form-label" for="cantidad">Habitacion para cuantos:</label>
+                <input asp-for="cantidadPersonas" type="number" id="cantidad" class="form-control" />
+
             </div>
+        </div>
 
-            <div class="mb-3">
-                <div class="col-lg-6 col-sm-12">
-                    <label class="form-label" for="pagp">Forma de Pago :</label>
-                    <select>
-                       <option value="1">Credito</option>
-                       <option value="2">Debito</option>
-                       <option value="3">Mercado Pago</option>
-                       <option value="4">Transferencia</option>
-                       <option value="5">Efectivo</option>
-                    </select>
-                </div>
+        <div class="mb-3">
+            <div class="col-lg-6 col-sm-12">
+                <label class="form-label" for="ingreso">Fecha de ingreso:</label>
+                <input asp-for="fechaInicio" type="date" id="ingreso" />
             </div>
+        </div>
 
-            <div class="mb-3">
-                <div class="col-lg-6 col-sm-12">
-                    <label class="form-label" for="cantidad">Habitacion para cuantos:</label>
-                    <input type="number" id="cantidad" class="form-control"/>
-
-                </div>
+        <div class="mb-3">
+            <div class="col-lg-6 col-sm-12">
+                <label class="form-label" for="egreso">Fecha de egreso:</label>
+                <input asp-for="fechaFinal" type ="date" id="egreso" /> <!-- Validar desde HTML con evento on keyup del ingreso? con el min  -->
             </div>
+        </div>
 
-            <div class="mb-3">
-                <div class="col-lg-6 col-sm-12">
-                    <label class="form-label" for="ingreso">Fecha de ingreso:</label>
-                    <input  type="date" id="ingreso"/>
-                </div>
+        <div class="mb-3">
+            <div class="col-lg-6 col-sm-12">
+                <button type="submit" class="btn btn-outline-danger form-control">Buscar habitaciones</button>
             </div>
-
-            <div class="mb-3">
-                <div class="col-lg-6 col-sm-12">
-                    <label class="form-label" for="egreso">Fecha de egreso:</label>
-                    <input type="date" id="egreso"/> <!-- Validar desde HTML con evento on keyup del ingreso? con el min  -->
-                </div>
-            </div>
-
-            <div class="mb-3">
-                <div class="col-lg-6 col-sm-12">
-                    <button onclick="habitacionesDisponibles()" class="btn btn-outline-danger form-control">Buscar habitaciones</button> <!-- Por Desarrollar -->
-                </div>
-            </div>
-
-             <div class="mb-3">
-                <div class="col-lg-6 col-sm-12">
-            <label class="form-label" for="pagp" >Habitaciones :</label>
-                <select id ="habitacionesSelect">
-               
-                <option>...</option>
-              
-
-                </select>
-                    
-                </div>
-            </div>
-
-            <div class="mb-3">
-                <div class="col-lg-12 col-sm-12">
-                    <label class="form-label" for="precio">Precio :</label>
-                    <input type="number" id="precio" class="form-control" placeholder="Ingrese el precio" />
-                    <div id="errorPrecio"> </div>
-                </div>
-            </div>
-
-            <div class="mb-3">
-                <div class="col-lg-6 col-sm-12">
-                    <label class="form-label" for="total">Total :</label>
-                    <input type="text" id="total" class="form-control" readonly />
-                </div>
-            </div>
-
-            <div class="mb-3">
-                <div class="col-lg-6 col-sm-12">
-                    <button onclick="reservar()" class="btn btn-outline-danger form-control">Reservar</button> <!-- Por Desarrollar -->
-                </div>
-            </div>
-        </form>
-
-@section Scripts
-    {
-    <script src="~/js/reservar.js"></script>
-
-    <script>
-        function habitacionesDisponibles(){
-            let cantPersonas = parseInt(document.getElementById('cantidad').value);
-            alert(typeof(cantPersonas));
-            /*let fechaIngreso = document.getElementById('ingreso');
-            let fechaEgreso = document.getElementById('egreso');
-
-            var formData = new FormData();
-            formData.append('cantPersonas', cantPersonas);
-            formData.append('ingreso', fechaIngreso);
-            formData.append('egreso', fechaEgreso);*/
-
-                fetch(`../Controllers/HomeController/BusquedaHabitaciones?cantidadPersonas=${cantPersonas}`)
-                    .then(response =>{
-                        alert(response);
-                        response.json()
-                        alert(response)
-                    })
-                    .then(data => {
-                        alert(data); //DEVUELVE UNDEFINE
-                        var select = document.getElementById("habitacionesSelect");
-                        select.innerHTML = ""; // Limpiar opciones existentes
-
-                        data.forEach(habitacion => {
-                            var option = document.createElement("option");
-                            option.value = habitacion.Id;
-                            option.textContent = habitacion.Nombre;
-                            select.appendChild(option);
-                        });
-                    })
-                    .catch(error => {
-                        console.error(error);
-                    });
-        }
-    </script>
-    }
+        </div>
+    </div>
+ </form>
