--- a/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DatosReserva_aux
 
-<form ASP-action="" class="container" style="margin-top: 1rem" >
+<form asp-controller="Home" asp-action="AgregarReserva" class="container" style="margin-top: 1rem">
 
     <div class="row">
         <div class="mb-3">
@@ -29,8 +29,14 @@
                 <label class="form-label" for="pagp">Habitaciones :</label>
                 <select asp-for="@Model.reservaAux.nroHabitacion" id="habitacionesSelect">
 
-                    @foreach( Habitacion h in Model.habitacionesDisponibles)
+                    @{
+
+                        Console.WriteLine("MODELO" + Model.habitacionesDisponibles);
+                    };
+
+                    @foreach (var h in Model.habitacionesDisponibles)
                     {
+                        Console.WriteLine("MODELO" + Model.habitacionesDisponibles);
                         <option value="@h.numHabitacion">@h.numHabitacion / $ @h.costoPorDia</option>
  
                     }
