--- a/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
@@ -6,7 +6,7 @@
         <div class="mb-3">
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="titular">Titular</label>
-                <input asp-for="@Model.reservaAux.titular" type="text" id="titular" class="form-control" />
+                <input asp-for="@Model.reservaAux.titular" type="text" id="titular" class="form-control" required/>
             </div>
         </div>
 
@@ -14,7 +14,7 @@
         <div class="mb-3">
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="pagp">Forma de Pago :</label>
-                <select asp-for="@Model.reservaAux.idMedioPago">
+                <select asp-for="@Model.reservaAux.idMedioPago" >
                     <option value="1">Credito</option>
                     <option value="2">Debito</option>
                     <option value="3">Mercado Pago</option>
@@ -26,28 +26,30 @@
 
         <div class="mb-3">
             <div class="col-lg-6 col-sm-12">
-                <label class="form-label" for="pagp">Habitaciones :</label>
-                <select asp-for="@Model.reservaAux.nroHabitacion" id="habitacionesSelect">
+                <label class="form-label" for="pagp">Habitaciones :</label> 
 
-                    @{
-
-                        Console.WriteLine("MODELO" + Model.habitacionesDisponibles);
-                    };
-
-
+                        
                     @if (Model.habitacionesDisponibles.Count > 0)
                     {
-                       foreach (var h in Model.habitacionesDisponibles)
+                    <select asp-for="@Model.reservaAux.nroHabitacion" id="habitacionesSelect">
+
+                        <option value="count">Habitaciones disponibles : @Model.habitacionesDisponibles.Count </option> <!-- Validar distinto a count al enviar-->
+                        @foreach (var h in Model.habitacionesDisponibles)
                         {
                             Console.WriteLine("MODELO" + Model.habitacionesDisponibles);
-                            <option value="@h.numHabitacion">@h.numHabitacion / $ @h.costoPorDia</option>
- 
-                        } 
+                            <option value="@h.numHabitacion">N° @h.numHabitacion / $ @h.costoPorDia</option>
+
+                        }
+                        </select>
                     }
-                    
+                    else
+                    {
+                        <p style="color: red; font-weight: bold; font-size: 2rem;">No hay abitaciones disponibles con esos criterios</p>
+                    }
+
                    
 
-                </select>
+                
 
             </div>
         </div>
@@ -56,7 +58,7 @@
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="ingreso">Fecha de ingreso:</label>
                 <input asp-for="@Model.reservaAux.fechaIngreso" readonly type="date" id="ingreso" value="@Model.reservaAux.fechaIngreso" hidden/>
-                <p>@Model.reservaAux.fechaIngreso</p>
+                <p>@Model.reservaAux.fechaIngreso.ToShortDateString()</p>
             </div>
         </div>
 
@@ -64,7 +66,7 @@
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="egreso">Fecha de egreso:</label>
                 <input asp-for="@Model.reservaAux.fechaEgreso" readonly type="date" id="egreso" value="@Model.reservaAux.fechaEgreso" hidden />
-                <p>@Model.reservaAux.fechaEgreso</p>
+                <p>@Model.reservaAux.fechaEgreso.ToShortDateString()</p>
             </div>
         </div>
 
