--- a/ReservaHoteles_TPFinal/Views/Home/Index.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model FiltroReserva
 @{
     ViewData["Title"] = "Home Page";
+    var fechaActual = DateTime.Now.ToString("yyyy-MM-dd"); //dd-MM-yyyy <--- formato local (no lo acepta el type="date")
+
 }
 
 <form asp-controller="Home"  asp-action="ObtenerHabitaciones" class=" container" style="margin-top: 1rem">
@@ -18,14 +20,14 @@
         <div class="mb-3">
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="ingreso">Fecha de ingreso:</label>
-                <input asp-for="fechaInicio" type="date" id="ingreso" />
+                <input asp-for="fechaInicio" type="date" id="ingreso" min="@fechaActual" onchange="validarEgreso()"/>
             </div>
         </div>
 
         <div class="mb-3">
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="egreso">Fecha de egreso:</label>
-                <input asp-for="fechaFinal" type ="date" id="egreso" /> <!-- Validar desde HTML con evento on keyup del ingreso? con el min  -->
+                <input asp-for="fechaFinal" type="date" id="egreso" min="@fechaActual" /> <!-- Validar desde HTML con evento on keyup del ingreso? con el min  -->
             </div>
         </div>
 
@@ -36,3 +38,11 @@
         </div>
     </div>
  </form>
+
+
+<script>
+    function validarEgreso() {
+        var ingreso = document.getElementById("ingreso").value;
+        document.getElementById("egreso").min = ingreso;
+    }
+</script>
