--- a/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
@@ -6,7 +6,7 @@
         <div class="mb-3">
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="titular">Titular</label>
-                <input asp-for="@Model.reservaAux.titular" type="text" id="titular" class="form-control" required/>
+                <input asp-for="reservaAux.titular" type="text" id="titular" class="form-control" required/>
             </div>
         </div>
 
@@ -14,7 +14,7 @@
         <div class="mb-3">
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="pagp">Forma de Pago :</label>
-                <select asp-for="@Model.reservaAux.idMedioPago" >
+                <select asp-for="reservaAux.idMedioPago" >
                     <option value="1">Credito</option>
                     <option value="2">Debito</option>
                     <option value="3">Mercado Pago</option>
@@ -31,7 +31,7 @@
                         
                     @if (Model.habitacionesDisponibles.Count > 0)
                     {
-                    <select asp-for="@Model.reservaAux.nroHabitacion" id="habitacionesSelect">
+                    <select asp-for="reservaAux.nroHabitacion" id="habitacionesSelect">
 
                         <option value="count">Habitaciones disponibles : @Model.habitacionesDisponibles.Count </option> <!-- Validar distinto a count al enviar-->
                         @foreach (var h in Model.habitacionesDisponibles)
@@ -57,7 +57,7 @@
         <div class="mb-3">
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="ingreso">Fecha de ingreso:</label>
-                <input asp-for="@Model.reservaAux.fechaIngreso" readonly type="date" id="ingreso" value="@Model.reservaAux.fechaIngreso" hidden/>
+                <input asp-for="reservaAux.fechaIngreso" readonly type="date" id="ingreso" value="@Model.reservaAux.fechaIngreso" hidden/>
                 <p>@Model.reservaAux.fechaIngreso.ToShortDateString()</p>
             </div>
         </div>
@@ -65,7 +65,7 @@
         <div class="mb-3">
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="egreso">Fecha de egreso:</label>
-                <input asp-for="@Model.reservaAux.fechaEgreso" readonly type="date" id="egreso" value="@Model.reservaAux.fechaEgreso" hidden />
+                <input asp-for="reservaAux.fechaEgreso" readonly type="date" id="egreso" value="@Model.reservaAux.fechaEgreso" hidden />
                 <p>@Model.reservaAux.fechaEgreso.ToShortDateString()</p>
             </div>
         </div>
