Creating Reservas in database

--- a/ReservaHoteles_TPFinal/Views/Home/Index.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
             <div class="mb-3">
                 <div class="col-lg-6 col-sm-12">
                     <label class="form-label" for="egreso">Fecha de egreso:</label>
-                    <input asp-for="fechaFinal" type="date" id="egreso" min="@fechaActual" required /> <!-- Validar desde HTML con evento on keyup del ingreso? con el min  -->
+                    <input asp-for="fechaFinal" type="date" id="egreso" min="@fechaActual" required /> 
                 </div>
             </div>
 
