--- a/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
@@ -1,7 +1,8 @@
 ﻿@model DatosReserva_aux
+<a asp-action="Index" asp-controller="Home">Reservar</a>
 
 <form asp-controller="Home" asp-action="AgregarReserva" class="container" style="margin-top: 1rem">
-
+    
     <div class="row">
         <div class="mb-3">
             <div class="col-lg-6 col-sm-12">
