Agregue CheckInController , su vista y detalles

--- a/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
@@ -7,7 +7,7 @@
         <div class="mb-3">
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="titular">Titular</label>
-                <input asp-for="titular" type="text" id="titular" class="form-control" required/>
+                <input asp-for="titular" type="text" id="titular" class="form-control" placeholder="Pepito" required/>
             </div>
         </div>
 
@@ -43,7 +43,7 @@
                     }
                     else
                     {
-                        <p style="color: red; font-weight: bold; font-size: 2rem;">No hay abitaciones disponibles con esos criterios</p>
+                        <p style="color: red; font-weight: bold; font-size: 2rem;">No hay habitaciones disponibles con esos criterios</p>
                     }
 
                    
@@ -78,3 +78,5 @@
     </div>
 
 </form>
+
+
