Defining Index and Footer styles

--- a/ReservaHoteles_TPFinal/Views/Home/Index.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/Index.cshtml
@@ -1,10 +1,13 @@
-﻿<div class="container">
-    <div>
+﻿
+<link rel="stylesheet" href="~/css/index.css" />
+
+<section id="index_container">
+    <section>
         <a asp-action="FiltroReservas" asp-controller="Home">Reservar</a>
         <a asp-action="CheckIn" asp-controller="Home">Check In</a>
         <a asp-action="CheckOut" asp-controller="Home">Check Out</a>
-    </div>
-</div>
+    </section>
+</section>
 
 
 
