--- a/ReservaHoteles_TPFinal/Views/Shared/_Layout.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Shared/_Layout.cshtml
@@ -37,9 +37,9 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - ReservaHoteles_TPFinal - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+        <section class="container">
+            <h6 style="text-align: center; padding: .5rem;"> &copy; 2023 - Grupo 4 PNT</h6>
+        </section>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
