Adding room filter by dates

--- a/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
@@ -1,5 +1,4 @@
 ﻿@model DatosReserva_aux
-<a asp-action="Index" asp-controller="Home">Reservar</a>
 
 <form asp-controller="Home" asp-action="AgregarReserva" class="container" style="margin-top: 1rem">
     
@@ -7,7 +6,7 @@
         <div class="mb-3">
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="titular">Titular</label>
-                <input asp-for="titular" type="text" id="titular" class="form-control" placeholder="Pepito" required/>
+                <input asp-for="titular" type="text" id="titular" class="form-control" required/>
             </div>
         </div>
 
