Finishing check-in, adding check-out

--- a/ReservaHoteles_TPFinal/Views/Home/CheckIn.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/CheckIn.cshtml
@@ -2,7 +2,7 @@
 <div class="container">
     <h1>CHECK IN </h1>
 
-<form asp-controller="Reservas" asp-action="BuscarReserva" class=" container" style="margin-top: 1rem">
+    <form asp-controller="Reservas" asp-action="CheckIn" class=" container" style="margin-top: 1rem">
         <div class="row">
 
             <div class="mb-3">
