Check Out done, add date validation to Check In

--- a/ReservaHoteles_TPFinal/Views/Home/CheckIn.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/CheckIn.cshtml
@@ -14,7 +14,7 @@
 
             <div class="mb-3">
                 <div class="col-lg-6 col-sm-12">
-                    <button type="submit" class="btn btn-outline-danger form-control">Registrar</button>
+                    <button type="submit" class="btn btn-outline-danger form-control">Check In</button>
                 </div>
             </div>
         </div>
