--- a/ReservaHoteles_TPFinal/Views/Home/CheckOut.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/CheckOut.cshtml
@@ -6,14 +6,14 @@
 
             <div class="mb-3">
                 <div class="col-lg-6 col-sm-12">
-                    <label class="form-label" for="titular">¿A nombre de quien era la reserva?</label>
+                    <label class="form-label" for="titular">Titular de la habitacion</label>
                     <input asp-for="titularReserva" type="text" id="titular" class="form-control" required />
                 </div>
             </div>
 
             <div class="mb-3">
                 <div class="col-lg-6 col-sm-12">
-                    <button type="submit" class="btn btn-outline-danger form-control">Registrar</button>
+                    <button type="submit" class="btn btn-outline-danger form-control">Check Out</button>
                 </div>
             </div>
         </div>
