Added string length validation

--- a/ReservaHoteles_TPFinal/Views/Home/CheckIn.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/CheckIn.cshtml
@@ -8,7 +8,7 @@
             <div class="mb-3">
                 <div class="col-lg-6 col-sm-12">
                     <label class="form-label" for="titular">¿A nombre de quien era la reserva?</label>
-                <input asp-for="titularReserva" type="text" id="titular" class="form-control" required/>
+                <input asp-for="titularReserva" type="text" id="titular" class="form-control" maxlength="100" required/>
                 </div>
             </div>
 
