--- a/ReservaHoteles_TPFinal/Views/Home/CheckOut.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/CheckOut.cshtml
@@ -7,7 +7,7 @@
             <div class="mb-3">
                 <div class="col-lg-6 col-sm-12">
                     <label class="form-label" for="titular">Titular de la habitacion</label>
-                    <input asp-for="titularReserva" type="text" id="titular" class="form-control" required />
+                    <input asp-for="titularReserva" type="text" id="titular" class="form-control" maxlength="100" required />
                 </div>
             </div>
 
