--- a/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
+++ b/ReservaHoteles_TPFinal/Views/Home/Reservar.cshtml
@@ -6,7 +6,7 @@
         <div class="mb-3">
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="titular">Titular</label>
-                <input asp-for="titular" type="text" id="titular" class="form-control" required/>
+                <input asp-for="titular" type="text" id="titular" class="form-control" maxlength="100" required />
             </div>
         </div>
 
@@ -15,11 +15,11 @@
             <div class="col-lg-6 col-sm-12">
                 <label class="form-label" for="pagp">Forma de Pago :</label>
                 <select asp-for="idMedioPago" >
+                    <option value="5">Efectivo</option>
                     <option value="1">Credito</option>
                     <option value="2">Debito</option>
                     <option value="3">Mercado Pago</option>
                     <option value="4">Transferencia</option>
-                    <option value="5">Efectivo</option>
                 </select>
             </div>
         </div>
